# tabr

./: .travis.yml  Cargo.toml  README.md  build.rs  test_key.asc
scripts/: migrate_passout.py
src/: config.rs  gpg.rs  lib.rs  main.rs  password.rs  pwned.rs
