[package]
name = "tabr"
version = "0.1.0"
authors = ["Edd Barrett <vext01@gmail.com>"]

[dependencies]
env_logger = "0.4"
log = "0.3"
walkdir = "1.0"
clap = "2.26"
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
gpgme = "0.7"
ttyaskpass = "1.2"
clipboard = "0.4"

[dev-dependencies]
tempfile = "3.0"
